// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`convertRoomPlanToSvg > matches snapshot for CapturedStructure 1`] = `
"<?xml version="1" encoding="UTF-8"?>
<svg xmlns="http://www.w3.org/2000/svg" viewBox="-0.5 -0.5 4 4" width="4" height="4">
  <rect x="-0.5" y="-0.5" width="4" height="4" fill="#ffffff" />
  <g data-layer="walls" fill="none" stroke="#000000" stroke-width="0.05" stroke-linecap="square">
    <line x1="0" y1="0" x2="3" y2="0" />
    <line x1="0" y1="3" x2="0" y2="0" />
    <line x1="0" y1="3" x2="3" y2="3" />
  </g>
</svg>"
`;

exports[`convertRoomPlanToSvg > matches snapshot for L-shape room 1`] = `
"<?xml version="1" encoding="UTF-8"?>
<svg xmlns="http://www.w3.org/2000/svg" viewBox="-0.5 -0.5 6 4" width="6" height="4">
  <rect x="-0.5" y="-0.5" width="6" height="4" fill="#ffffff" />
  <g data-layer="walls" fill="none" stroke="#000000" stroke-width="0.05" stroke-linecap="square">
    <line x1="0" y1="0" x2="5" y2="0" />
    <line x1="5" y1="3" x2="5" y2="0" />
    <line x1="3" y1="3" x2="5" y2="3" />
  </g>
</svg>"
`;

exports[`convertRoomPlanToSvg > matches snapshot for curved wall room 1`] = `
"<?xml version="1" encoding="UTF-8"?>
<svg xmlns="http://www.w3.org/2000/svg" viewBox="-2.5 -0.93 5.18 3.61" width="5.18" height="3.61">
  <rect x="-2.5" y="-0.93" width="5.18" height="3.61" fill="#ffffff" />
  <g data-layer="walls" fill="none" stroke="#000000" stroke-width="0.05" stroke-linecap="square">
    <line x1="-2" y1="0" x2="0" y2="0" />
    <line x1="0" y1="2" x2="0" y2="0" />
    <path d="M 2.18 -0.43 A 2 2 0 1 1 -0.43 2.18" />
  </g>
</svg>"
`;

exports[`convertRoomPlanToSvg > matches snapshot for rectangle room 1`] = `
"<?xml version="1" encoding="UTF-8"?>
<svg xmlns="http://www.w3.org/2000/svg" viewBox="-0.5 -0.5 5 4" width="5" height="4">
  <rect x="-0.5" y="-0.5" width="5" height="4" fill="#ffffff" />
  <g data-layer="walls" fill="none" stroke="#000000" stroke-width="0.05" stroke-linecap="square">
    <line x1="0" y1="0" x2="4" y2="0" />
    <line x1="0" y1="3" x2="4" y2="3" />
    <line x1="0" y1="3" x2="0" y2="0" />
    <line x1="4" y1="3" x2="4" y2="0" />
  </g>
</svg>"
`;

exports[`convertRoomPlanToSvg > matches snapshot for rectangle with opening 1`] = `
"<?xml version="1" encoding="UTF-8"?>
<svg xmlns="http://www.w3.org/2000/svg" viewBox="-0.5 -0.5 5 4" width="5" height="4">
  <rect x="-0.5" y="-0.5" width="5" height="4" fill="#ffffff" />
  <g data-layer="walls" fill="none" stroke="#000000" stroke-width="0.05" stroke-linecap="square">
    <line x1="0" y1="0" x2="4" y2="0" />
    <line x1="0" y1="3" x2="4" y2="3" />
    <line x1="0" y1="3" x2="0" y2="0" />
    <line x1="4" y1="3" x2="4" y2="0" />
  </g>
</svg>"
`;

exports[`firesight room scan > matches snapshot for real FireSight fixture 1`] = `
"<?xml version="1" encoding="UTF-8"?>
<svg xmlns="http://www.w3.org/2000/svg" viewBox="-4.58 -5.66 4.67 6.28" width="4.67" height="6.28">
  <rect x="-4.58" y="-5.66" width="4.67" height="6.28" fill="#ffffff" />
  <g data-layer="walls" fill="none" stroke="#000000" stroke-width="0.05" stroke-linecap="square">
    <line x1="-0.4" y1="-5.16" x2="-0.4" y2="-0.92" />
    <line x1="-0.4" y1="-0.02" x2="-0.4" y2="0.12" />
    <line x1="-3.91" y1="-5.16" x2="-3.91" y2="-4.38" />
    <line x1="-3.91" y1="-3.62" x2="-3.91" y2="-2.94" />
    <line x1="-3.91" y1="-2.13" x2="-3.91" y2="-1.36" />
    <line x1="-3.91" y1="-0.65" x2="-3.91" y2="0.12" />
    <line x1="-3.91" y1="0.12" x2="-0.4" y2="0.12" />
    <line x1="-3.91" y1="-5.16" x2="-0.4" y2="-5.16" />
  </g>
  <g data-layer="openings" fill="none" stroke="#000000" stroke-width="0.03" stroke-linecap="round">
    <line x1="-3.85" y1="-4.38" x2="-3.97" y2="-4.38" />
    <line x1="-3.85" y1="-3.62" x2="-3.97" y2="-3.62" />
    <line x1="-3.96" y1="-4.33" x2="-3.96" y2="-3.67" />
    <line x1="-4.08" y1="-4.33" x2="-4.08" y2="-3.67" />
    <polygon points="-3.96,-4.02 -3.96,-3.98 -4.08,-3.98 -4.08,-4.02" fill="#000000" stroke="none" />
    <line x1="-3.85" y1="-2.94" x2="-3.97" y2="-2.94" />
    <line x1="-3.85" y1="-2.13" x2="-3.97" y2="-2.13" />
    <line x1="-3.96" y1="-2.89" x2="-3.96" y2="-2.18" />
    <line x1="-4.08" y1="-2.89" x2="-4.08" y2="-2.18" />
    <polygon points="-3.96,-2.56 -3.96,-2.52 -4.08,-2.52 -4.08,-2.56" fill="#000000" stroke="none" />
    <line x1="-3.85" y1="-1.36" x2="-3.97" y2="-1.36" />
    <line x1="-3.85" y1="-0.65" x2="-3.97" y2="-0.65" />
    <line x1="-3.96" y1="-1.31" x2="-3.96" y2="-0.7" />
    <line x1="-4.08" y1="-1.31" x2="-4.08" y2="-0.7" />
    <polygon points="-3.96,-1.02 -3.96,-0.98 -4.08,-0.98 -4.08,-1.02" fill="#000000" stroke="none" />
    <line x1="-0.4" y1="-0.92" x2="-1.3" y2="-0.92" />
    <path d="M -1.3 -0.92 A 0.9 0.9 0 0 0 -0.4 -0.02" />
  </g>
  <g data-layer="objects" fill="none" stroke="#000000" stroke-width="0.05" stroke-linecap="square">
    <rect x="-3.83" y="-4.96" width="1.32" height="1.97" fill="#ffffff" transform="rotate(0, -3.17, -3.98)" />
    <rect x="-1.02" y="-3.61" width="0.74" height="0.34" fill="#ffffff" transform="rotate(90, -0.65, -3.44)" />
    <rect x="-0.88" y="-1.63" width="0.4" height="0.4" fill="#ffffff" transform="rotate(90, -0.68, -1.44)" />
    <rect x="-3.15" y="-0.28" width="1.84" height="0.32" fill="#ffffff" transform="rotate(-180, -2.23, -0.12)" />
    <rect x="-3.88" y="-1.85" width="0.45" height="0.35" fill="#ffffff" transform="rotate(-90, -3.66, -1.67)" />
    <rect x="-2.65" y="-4.33" width="1.09" height="0.66" fill="#ffffff" transform="rotate(-90, -2.1, -4)" />
    <rect x="-3.83" y="-0.49" width="0.61" height="0.54" fill="#ffffff" transform="rotate(-180, -3.53, -0.23)" />
    <rect x="-2.51" y="-5.08" width="0.84" height="0.44" fill="#ffffff" transform="rotate(0, -2.09, -4.86)" />
    <rect x="-1.29" y="-4.68" width="1.22" height="0.41" fill="#ffffff" transform="rotate(90, -0.68, -4.47)" />
    <rect x="-1.34" y="-2.62" width="1.19" height="0.53" fill="#ffffff" transform="rotate(90, -0.74, -2.35)" />
  </g>
  <g data-layer="labels" fill="#000000" stroke="none">
    <text x="-2.15" y="-2.52" text-anchor="middle" dominant-baseline="middle" font-family="Arial, Helvetica, sans-serif" font-size="0.28">Room</text>
  </g>
</svg>"
`;
